--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                     <a id="profile-link" href="https://www.freecodecamp.org/ChrisMar" target="_blank">Know More About Me<i class="fa fa-angle-down"></i></a>
                 </div>
                 <div id="profile-picture">
-                    <img src="https://scontent.fceb1-1.fna.fbcdn.net/v/t39.30808-6/232275210_4081533838639055_262502616644686483_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeHptlkoBK5qxIjQACtCf-wqoGaqEo4r0aCgZqoSjivRoK_DXs1DNbTHpLGzkZZ3VNyD4GOTCZL654Ce2f2r-htU&_nc_ohc=4uhmGtiSTf8AX-ywPTu&_nc_zt=23&_nc_ht=scontent.fceb1-1.fna&oh=00_AT9o4z9iVxtpuSSFKxX_5vdsmOc3n_-bogH-8YECcOAdAA&oe=6291D2D9" alt="">
-<!--                     <img src="https://images.ctfassets.net/3m6gg2lxde82/4vV8v5PVtQXnRY9z8q1vpq/b99ac058bc28a7aacd05a3a479c8692a/AndrewGarfieldGettyImages-1382097153.jpg.png" alt=""> -->
+                    <img src="images/profile-picture.jpg" alt="Chris Mar Kitane">
                 </div>
             </div>
         </div>
